added helm chart templates

--- a/chart/env.yaml.j2
+++ b/chart/env.yaml.j2
@@ -1,10 +1,10 @@
-fullnameOverride: "{{ KUBERNETES.CDNDOMAIN_FULLNAME_OVERRIDE }}"
+fullnameOverride: "{{ KUBERNETES.COMMON_FULLNAME_OVERRIDE }}"
 
 image:
-  repository: {{ IMAGES.CAESAR_CDNDOMAIN_TAG.split(":")[0] }}
+  repository: {{ IMAGES.CAESAR_COMMON_TAG.split(":")[0] }}
   pullPolicy: Always
   # Overrides the image tag whose default is the chart version.
-  tag: {{ IMAGES.CAESAR_CDNDOMAIN_TAG.split(":")[1] }}
+  tag: {{ IMAGES.CAESAR_COMMON_TAG.split(":")[1] }}
   
 config: 
   secret_key: {{ SECRETS.SECRET_KEY }}
@@ -18,18 +18,7 @@ db:
   db_port: {{ POSTGRESQL.POSTGRESQL_DB_PORT }}
   db_user: {{ POSTGRESQL.POSTGRESQL_DB_USER }}
   db_password: {{ POSTGRESQL.POSTGRESQL_DB_PASS }}
-  db_database: {{ DATABASES.CDNDOMAIN_DB_NAME }}
-
-ingress:
-  enabled: false
-  annotations: {}
-  hosts:
-    - host: domain.cwcdn.com
-      paths:
-      - /
-    - host: api.cwcdn.com
-      paths:
-      - /api/v1/domain/
+  db_database: {{ DATABASES.COMMON_DB_NAME }}
 
 resources:
   requests:
