added database credentials

--- a/chart/env.yaml.j2
+++ b/chart/env.yaml.j2
@@ -34,4 +34,8 @@ autoscaling:
 
 env:
   TIME_ZONE: "{{ GLOBALS.TIME_ZONE }}"
-  
+  POSTGRESQL_DB_HOST: "{{ POSTGRESQL.POSTGRESQL_DB_HOST }}"
+  POSTGRESQL_DB_PORT: "{{ POSTGRESQL.POSTGRESQL_DB_PORT }}"
+  POSTGRESQL_DB_USER: "{{ POSTGRESQL.POSTGRESQL_DB_USER }}"
+  POSTGRESQL_DB_PASS: "{{ POSTGRESQL.POSTGRESQL_DB_PASS }}"
+  COMMON_DB_NAME: "{{ DATABASES.COMMON_DB_NAME }}"
