feat(CPV-10): show fail2ban logs in console

--- a/chart/env.yaml.j2
+++ b/chart/env.yaml.j2
@@ -39,3 +39,9 @@ env:
   POSTGRESQL_DB_USER: "{{ POSTGRESQL.POSTGRESQL_DB_USER }}"
   POSTGRESQL_DB_PASS: "{{ POSTGRESQL.POSTGRESQL_DB_PASS }}"
   COMMON_DB_NAME: "{{ DATABASES.COMMON_DB_NAME }}"
+
+  ALIYUN_LOG_ACCESS_KEY: {{ ALIYUN.ALIYUN_LOG_ACCESS_KEY }}
+  ALIYUN_LOG_ACCESS_SECRET: {{ ALIYUN.ALIYUN_LOG_ACCESS_SECRET }}
+  ALIYUN_LOG_ENDPOINT: {{ ALIYUN.ALIYUN_LOG_ENDPOINT }}
+  ALIYUN_LOG_PROJECT: {{ ALIYUN.ALIYUN_LOG_PROJECT }}
+  ALIYUN_LOG_LOGSTORE: {{ ALIYUN.ALIYUN_LOG_LOGSTORE }}
